# nyc-home-cost-calculator

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: python-tests.yml
notebooks/: example.ipynb
src/nyc_home_cost_calculator/: __init__.py  base.py  calculator.py  home.py  income.py  investment.py  life.py  measures.py  portfolio.py  rent.py  simulate.py  tax.py  utils.py
tests/: test_calculator.py  test_home.py  test_income.py  test_investment.py  test_life.py  test_measures.py  test_portfolio.py  test_rent.py  test_simulate.py  test_tax.py
