[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "nyc_home_cost_calculator"
authors = [{ name = "Jacob Reinhold" }]
description = "A package for simulating and analyzing home ownership costs in NYC"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["nyc", "real estate", "finance", "simulation"]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["numpy", "scipy", "matplotlib", "openpyxl"]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["nyc_home_cost_calculator*"]
namespaces = false

[tool.setuptools.dynamic]
version = { attr = "nyc_home_cost_calculator.__version__" }

[tool.ruff]
select = ["E", "F", "I", "N", "W", "B", "C90", "D"]
ignore = ["D100", "D104"]
line-length = 120
target-version = "py310"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.isort]
known-first-party = ["nyc_home_cost_calculator"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.10"
strict = true

[[tool.mypy.overrides]]
module = ["matplotlib.*", "openpyxl.*", "scipy.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
