[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "nyc_home_cost_calculator"
authors = [{ name = "Jacob Reinhold" }]
description = "A package for simulating and analyzing home ownership costs in NYC"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["nyc", "real estate", "finance", "simulation"]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies", "optional-dependencies", "version"]

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }
version = { attr = "nyc_home_cost_calculator.__version__" }

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = "requirements-dev.txt" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["nyc_home_cost_calculator*"]
namespaces = false

[tool.setuptools.package-data]
"nyc_home_cost_calculator" = ["py.typed"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C90", "D"]
ignore = ["D100", "D104"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["D"]
"*.ipynb" = ["D"]

[tool.ruff.lint.isort]
known-first-party = ["nyc_home_cost_calculator"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.10"

[[tool.mypy.overrides]]
module = ["matplotlib.*", "openpyxl.*", "scipy.*", "tqdm.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra --disable-warnings"
testpaths = ["tests"]
