[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "nyc_home_cost_calculator"
authors = [{ name = "Jacob Reinhold" }]
description = "A package for simulating and analyzing home ownership costs in NYC"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["nyc", "real estate", "finance", "simulation"]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies", "optional-dependencies", "version"]

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }
version = { attr = "nyc_home_cost_calculator.__version__" }

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = "requirements-dev.txt" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["nyc_home_cost_calculator*"]
namespaces = false

[tool.setuptools.package-data]
"nyc_home_cost_calculator" = ["py.typed"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
    "D",    # pydocstyle
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "YTT",  # flake8-2020
    "ANN",  # flake8-annotations
    "S",    # flake8-bandit
    "BLE",  # flake8-blind-except
    "FBT",  # flake8-boolean-trap
    "COM",  # flake8-commas
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "T10",  # flake8-debugger
    "EM",   # flake8-errmsg
    "EXE",  # flake8-executable
    "ISC",  # flake8-implicit-str-concat
    "ICN",  # flake8-import-conventions
    "LOG",  # flake8-logging
    "G",    # flake8-logging-format
    "INP",  # flake8-no-pep420
    "PIE",  # flake8-pie
    "T20",  # flake8-print
    "PYI",  # flake8-pyi
    "PT",   # flake8-pytest-style
    "Q",    # flake8-quotes
    "RSE",  # flake8-raise
    "RET",  # flake8-return
    "SLF",  # flake8-self
    "SLOT", # flake8-slots
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "TCH",  # flake8-type-checking
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "TD",   # flake8-todo
    "ERA",  # eradicate
    "PD",   # pandas-vet
    "PGH",  # pygrep-hooks
    "PL",   # Pylint
    "TRY",  # tryceratops
    "FLY",  # flynt
    "NPY",  # numpy-style
    "FURB", # refurb
    "DOC",  # pydoclint
    "RUF",  # Ruff-specific rules
]
ignore = [
    "ANN101",
    "ANN102",
    "ANN204",
    "ANN401",
    "COM812",
    "ISC001",
    "PD901",
    "PLR2004",
    "RUF002",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["D", "S101", "ANN401", "SLF001", "ARG001", "PT004"]
"*.ipynb" = ["D", "ANN", "T20"]

[tool.ruff.lint.isort]
known-first-party = ["nyc_home_cost_calculator"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pycodestyle]
max-line-length = 120

[tool.ruff.lint.pylint]
max-args = 30

[tool.mypy]
python_version = "3.10"

[[tool.mypy.overrides]]
module = ["matplotlib.*", "openpyxl.*", "scipy.*", "tqdm.*", "yfinance.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra --disable-warnings"
testpaths = ["tests"]
